# kirdbyys-sports-culling

./: .env.example  .gitignore  Kirdbyys.desktop  Makefile  README.md  pyproject.toml  requirements.txt  verify_setup.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATASET_RECOMMENDATIONS.md  DB_SCHEMA.md  DEPLOYMENT.md  DUPLICATE_DETECTION.md  INSTALLATION.md  MODEL_SELECTION.md  OPTIMIZATION_GUIDE.md  ROADMAP.md  SCORING_ALGORITHM.md  TESTING_STRATEGY.md  TRAINING_STRATEGY.md  UI_WIREFRAMES.md
kirdbyys/: __main__.py  config.py  main.py
kirdbyys/ai/: analyzers.py  detectors.py  duplicate.py  hardware.py  models.py  ranking.py  sports.py
kirdbyys/api/: routes.py
kirdbyys/core/: database.py  job_manager.py  pipeline.py
kirdbyys/services/: export_service.py  import_service.py  lightroom.py
kirdbyys/ui/static/: app.js  styles.css
kirdbyys/ui/templates/: index.html
scripts/: setup_models.py
tests/: test_analyzers.py
