[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirdbyys-sports-culling"
version = "1.0.0"
description = "AI-Powered Sports Photography Analysis and Culling Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kirdbyys", email = "hello@kirdbyys.ai"}]
keywords = ["sports", "photography", "ai", "culling", "soccer", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "pillow>=10.3.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.23.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.10.0",
    "imagehash>=4.3.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
raw = ["rawpy>=0.19.0"]
report = ["reportlab>=4.0.0"]
all = ["rawpy>=0.19.0", "reportlab>=4.0.0"]

[project.scripts]
kirdbyys = "kirdbyys.main:run"

[project.urls]
Homepage = "https://kirdbyys.ai"
Documentation = "https://kirdbyys.ai/docs"
Repository = "https://github.com/kirdbyys/kirdbyys-sports-culling"

[tool.setuptools.packages.find]
where = ["."]
include = ["kirdbyys*"]
